--- a/Day 03 - Rotating Navigation/index.html
+++ b/Day 03 - Rotating Navigation/index.html
@@ -5,10 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>My Project</title>
+    <title>Rotating Navigation</title>
   </head>
   <body>
     <h1>Rotating Navigation</h1>
+
+    <div class="container">
+      <div class="circle-container">
+        <div class="circle">
+          <button id="close">
+            <i class="fas fa-times"></i>
+          </button>
+          <button id="open">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+      </div>
+      <div class="content">
+        <h1>Amazing Article</h1>
+        <small>Matthew McGrath</small>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, perspiciatis? Dolorem, qui fugit aperiam deserunt optio rerum nobis a, molestias illo laudantium, libero voluptatem laboriosam maiores ex unde aliquam ad nisi explicabo amet reiciendis earum itaque vitae? Sapiente iste atque repudiandae explicabo, quo aut harum saepe tempore officiis in, ullam distinctio eius minima libero. Voluptas nesciunt vero quisquam sed numquam, saepe earum blanditiis magni ducimus minima nulla non vel at quam temporibus quas in itaque quo dolor debitis? Sequi voluptates deleniti sapiente cum perferendis facilis illo corrupti esse quos numquam harum repellendus rem, ex modi placeat necessitatibus quis quas. Vel?</p>
+        <h3>My Dog!</h3>
+        <img src="https://images.unsplash.com/photo-1554079501-a254f876fc77?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=967&q=80" alt="Doggo">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi, debitis quos. Asperiores voluptatem voluptatibus exercitationem temporibus nobis, deserunt nihil alias esse eos ratione provident assumenda recusandae consequatur nam dolorum quaerat ut corrupti pariatur eum tempore! Voluptatibus blanditiis aspernatur culpa iure cum quisquam, sed, laborum, accusantium reprehenderit quibusdam distinctio ullam sit dolor. Possimus voluptatem corrupti sunt voluptate expedita, dolorem eveniet inventore suscipit vitae sit doloremque nihil distinctio placeat qui praesentium in sed? Doloribus vel dolore neque.</p>
+      </div>
+    </div>
+
+    <nav>
+      <ul>
+        <li><i class="fas fa-home"></i> Home</li>
+        <li><i class="fas fa-user-alt"></i> About</li>
+        <li><i class="fas fa-envelope"></i> Contact</li>
+      </ul>
+    </nav>
 
     <script src="script.js"></script>
     </script>
