Finish rotating navbar functionality & corresponding styling

--- a/Day 03 - Rotating Navigation/index.html
+++ b/Day 03 - Rotating Navigation/index.html
@@ -8,9 +8,9 @@
     <title>Rotating Navigation</title>
   </head>
   <body>
-    <h1>Rotating Navigation</h1>
-
     <div class="container">
+
+      <!-- Circle Container Div -->
       <div class="circle-container">
         <div class="circle">
           <button id="close">
@@ -21,16 +21,24 @@
           </button>
         </div>
       </div>
+      <!-- End of Circle Container -->
+
+      <!-- Content Div -->
       <div class="content">
         <h1>Amazing Article</h1>
         <small>Matthew McGrath</small>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, perspiciatis? Dolorem, qui fugit aperiam deserunt optio rerum nobis a, molestias illo laudantium, libero voluptatem laboriosam maiores ex unde aliquam ad nisi explicabo amet reiciendis earum itaque vitae? Sapiente iste atque repudiandae explicabo, quo aut harum saepe tempore officiis in, ullam distinctio eius minima libero. Voluptas nesciunt vero quisquam sed numquam, saepe earum blanditiis magni ducimus minima nulla non vel at quam temporibus quas in itaque quo dolor debitis? Sequi voluptates deleniti sapiente cum perferendis facilis illo corrupti esse quos numquam harum repellendus rem, ex modi placeat necessitatibus quis quas. Vel?</p>
-        <h3>My Dog!</h3>
-        <img src="https://images.unsplash.com/photo-1554079501-a254f876fc77?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=967&q=80" alt="Doggo">
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi, debitis quos. Asperiores voluptatem voluptatibus exercitationem temporibus nobis, deserunt nihil alias esse eos ratione provident assumenda recusandae consequatur nam dolorum quaerat ut corrupti pariatur eum tempore! Voluptatibus blanditiis aspernatur culpa iure cum quisquam, sed, laborum, accusantium reprehenderit quibusdam distinctio ullam sit dolor. Possimus voluptatem corrupti sunt voluptate expedita, dolorem eveniet inventore suscipit vitae sit doloremque nihil distinctio placeat qui praesentium in sed? Doloribus vel dolore neque.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis provident quis molestias tempore corporis debitis, minima illo veritatis rem quidem ea odio explicabo magnam dolore asperiores qui laborum nesciunt. Deleniti enim deserunt voluptatum fugit laboriosam necessitatibus incidunt quas eveniet aut, beatae nam? Quasi sapiente eveniet at, et, laudantium quo atque quidem perspiciatis velit magnam fuga qui aperiam ipsa dolorum mollitia nihil facere suscipit impedit non nobis asperiores neque ducimus sequi facilis. Reiciendis nulla, sunt odit harum eos in voluptates unde, nobis sit sed repudiandae eligendi velit! Maiores voluptates dolorem necessitatibus pariatur alias facilis quis, expedita magni autem modi iure odit!</p>
+        
+        <h3>My Dog</h3>
+        <img src="https://images.unsplash.com/photo-1534361960057-19889db9621e?ixid=MXwxMjA3fDB8MHxzZWFyY2h8M3x8ZG9nfGVufDB8fDB8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste enim, voluptas aspernatur, sequi quia dolor consequatur fuga officiis exercitationem tempora culpa cumque impedit doloribus laboriosam asperiores hic minima porro! Tempore veniam provident tempora veritatis corporis nulla eum, nemo impedit quisquam error inventore temporibus blanditiis quas aperiam sed excepturi illum repudiandae non, qui vitae eaque sapiente laudantium! Voluptatem ad odio mollitia harum doloremque aut sequi sed commodi qui provident! Eos iure recusandae porro sunt, dolorum eligendi.</p>
       </div>
-    </div>
+      <!-- End of Content Div -->
 
+    </div>
+    <!-- End of Circle Container Div -->
+
+    <!-- Start of Navbar -->
     <nav>
       <ul>
         <li><i class="fas fa-home"></i> Home</li>
@@ -38,6 +46,7 @@
         <li><i class="fas fa-envelope"></i> Contact</li>
       </ul>
     </nav>
+    <!-- End of Navbar -->
 
     <script src="script.js"></script>
     </script>
