--- a/Day 08 - Form Wave Animation/index.html
+++ b/Day 08 - Form Wave Animation/index.html
@@ -11,16 +11,16 @@
     <div class="container">
 
       <h1>Please Login</h1>
-      
+
       <form>
         <div class="form-control">
-          <input type="text" required>
-          <label>Email</label>
+          <input type="text" id="email" required>
+          <label for="email">Email</label>
         </div>
 
         <div class="form-control">
-          <input type="password" required>
-          <label>Password</label>
+          <input type="password" id="password" required>
+          <label for="password">Password</label>
         </div>
   
         <button class="btn">Login</button>
