--- a/Day 10 - Dad Jokes/index.html
+++ b/Day 10 - Dad Jokes/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>My Project</title>
+    <title>Dad Jokes</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+      <h3>Don't Laugh Challenge</h3>
+      <div id="joke" class="joke">
+        <!-- Joke goes here -->
+      </div>
+      <button id="joke-btn" class="btn">Get Another Joke</button>
+    </div>
 
     <script src="script.js"></script>
     </script>
