--- a/Day 13 - Random Choice Picker/index.html
+++ b/Day 13 - Random Choice Picker/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>My Project</title>
+    <title>Random Choice Picker</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
+    
+    <div class="container">
+      <h3>Enter all of the choices, seperated by a comma
+      <br> Press Enter when you are done</h3>
+      <textarea id="textarea" placeholder="Enter choices here...""></textarea>
+      <div id="tags">
+      </div>
+    </div>
 
     <script src="script.js"></script>
     </script>
