--- a/Day 14 - Animated Navigation/index.html
+++ b/Day 14 - Animated Navigation/index.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" />
-    <title>My Project</title>
+    <title>Animated Navigation</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
-
+    <nav id="nav" class="active">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Works</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <button id="toggle" class="icon">
+        <div id="line1" class="line"></div>
+        <div id="line2" class="line"></div>
+      </button>
+    </nav>
     <script src="script.js"></script>
     </script>
   </body>
