--- a/Day 15 - Increment Counter/index.html
+++ b/Day 15 - Increment Counter/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" />
-    <title>Increment Counter</title>
+    <title>My Project</title>
   </head>
   <body>
+    <h1>Project Starter</h1>
+
     <script src="script.js"></script>
     </script>
   </body>
