--- a/Day 16 - Drink Water/index.html
+++ b/Day 16 - Drink Water/index.html
@@ -5,25 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" />
-    <title>Increment Counter</title>
+    <title>My Project</title>
   </head>
-  <body>
-    <div class="counter-container">
-      <i class="fab fa-twitter fa-3x"></i>
-      <div class="counter" data-target="3000"></div>
-      <span>Twitter Followers</span>
+<h1>Drink Water</h1>
+    <h3>Goal: 2 Liters</h3>
+
+    <div class="cup">
+      <div class="remained" id="remained">
+        <span id="liters"></span>
+        <small>Remained</small>
+      </div>
+
+      <div class="percentage" id="percentage"></div>
     </div>
-    <div class="counter-container">
-      <i class="fab fa-youtube fa-3x"></i>
-      <div class="counter" data-target="5000"></div>
-      <span>YouTube Subscribers</span>
+
+    <p class="text">Select how many glasses of water that you have drank</p>
+
+    <div class="cups">
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
     </div>
-    <div class="counter-container">
-      <i class="fab fa-facebook fa-3x"></i>
-      <div class="counter" data-target="7500"></div>
-      <span>Facebook Friends</span>
-    </div>
+
     <script src="script.js"></script>
-    </script>
   </body>
 </html>
