--- a/Day 17 - Movie App/index.html
+++ b/Day 17 - Movie App/index.html
@@ -8,77 +8,11 @@
   </head>
   <body>
     <header>
-      <form class="form">
+      <form id="form" class="form">
         <input type="text" id="search" class="search" placeholder="Search" />
       </form>
     </header>
-    <main id="main">
-      <div class="movie">
-        <img src="https://images.unsplash.com/photo-1608170825938-a8ea0305d46c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=925&q=80" alt="" srcset="" />
-        <div class="movie-info">
-          <h3>Movie Title</h3>
-          <span class="green">9.8</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          incidunt tempore laborum perferendis laudantium fugiat nesciunt? Ut et
-          repellat autem.
-        </div>
-      </div>
-      <div class="movie">
-        <img src="https://images.unsplash.com/photo-1608170825938-a8ea0305d46c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=925&q=80" alt="" srcset="" />
-        <div class="movie-info">
-          <h3>Movie Title</h3>
-          <span class="green">9.8</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          incidunt tempore laborum perferendis laudantium fugiat nesciunt? Ut et
-          repellat autem.
-        </div>
-      </div>
-      <div class="movie">
-        <img src="https://images.unsplash.com/photo-1608170825938-a8ea0305d46c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=925&q=80" alt="" srcset="" />
-        <div class="movie-info">
-          <h3>Movie Title</h3>
-          <span class="green">9.8</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          incidunt tempore laborum perferendis laudantium fugiat nesciunt? Ut et
-          repellat autem.
-        </div>
-      </div>
-      <div class="movie">
-        <img src="https://images.unsplash.com/photo-1608170825938-a8ea0305d46c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=925&q=80" alt="" srcset="" />
-        <div class="movie-info">
-          <h3>Movie Title</h3>
-          <span class="green">9.8</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          incidunt tempore laborum perferendis laudantium fugiat nesciunt? Ut et
-          repellat autem.
-        </div>
-      </div>
-      <div class="movie">
-        <img src="https://images.unsplash.com/photo-1608170825938-a8ea0305d46c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=925&q=80" alt="" srcset="" />
-        <div class="movie-info">
-          <h3>Movie Title</h3>
-          <span class="green">9.8</span>
-        </div>
-        <div class="overview">
-          <h3>Overview</h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-          incidunt tempore laborum perferendis laudantium fugiat nesciunt? Ut et
-          repellat autem.
-        </div>
-      </div>
-    </main>
+    <main id="main"></main>
     <script src="script.js"></script>
   </body>
 </html>
