--- a/Day 19 - Button Ripple/index.html
+++ b/Day 19 - Button Ripple/index.html
@@ -11,9 +11,10 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title></title>
+    <title>Button Ripple</title>
   </head>
   <body>
+    <button class="ripple">Click Me</button>
     <script src="script.js"></script>
   </body>
 </html>
