--- a/Day 21 - Drag N Drop/index.html
+++ b/Day 21 - Drag N Drop/index.html
@@ -11,9 +11,16 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title></title>
+    <title>Drag N Drop</title>
   </head>
   <body>
+    <div class="empty">
+      <div class="fill" draggable="true"></div>
+    </div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
     <script src="script.js"></script>
   </body>
 </html>
