--- a/Day 24 - Content Placeholder/index.html
+++ b/Day 24 - Content Placeholder/index.html
@@ -15,39 +15,24 @@
   </head>
   <body>
     <div class="card">
-      <div class="card-header animated-bg" id="header">
-        <img
-          src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
-          alt=""
-          srcset=""
-        />
-      </div>
+      <div class="card-header animated-bg" id="header">&nbsp;</div>
       <div class="card-content">
         <h3 class="card-title animated-bg animated-bg-text" id="title">
-          Lorem ipsum dolor sit amet.
+          &nbsp;
         </h3>
         <p class="card-exerpt" id="exerpt">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit,
-          temporibus?
-          <span class="animatd-bg animated-bg-text">&nbsp;</span>
-          <span class="animatd-bg animated-bg-text">&nbsp;</span>
-          <span class="animatd-bg animated-bg-text">&nbsp;</span>
+          &nbsp;
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
         </p>
         <div class="author">
-          <div class="profile-img animated-bg" id="profile-img">
-            <img
-              src="https://randomuser.me/api/portraits/men/45.jpg"
-              alt=""
-              srcset=""
-            />
-          </div>
+          <div class="profile-img animated-bg" id="profile-img">&nbsp;</div>
           <div class="author-info">
             <strong class="animated-bg animated-bg-text" id="name"
-              >John Doe</strong
+              >&nbsp;</strong
             >
-            <small class="animated-bg animated-bg-text" id="date"
-              >August 30, 2021</small
-            >
+            <small class="animated-bg animated-bg-text" id="date">&nbsp;</small>
           </div>
         </div>
       </div>
