--- a/Day 24 - Content Placeholder/index.html
+++ b/Day 24 - Content Placeholder/index.html
@@ -14,28 +14,32 @@
     <title>Content Placeholder</title>
   </head>
   <body>
-    <div class="card">
-      <div class="card-header animated-bg" id="header">&nbsp;</div>
-      <div class="card-content">
-        <h3 class="card-title animated-bg animated-bg-text" id="title">
-          &nbsp;
-        </h3>
-        <p class="card-exerpt" id="exerpt">
-          &nbsp;
-          <span class="animated-bg animated-bg-text">&nbsp;</span>
-          <span class="animated-bg animated-bg-text">&nbsp;</span>
-          <span class="animated-bg animated-bg-text">&nbsp;</span>
-        </p>
-        <div class="author">
-          <div class="profile-img animated-bg" id="profile-img">&nbsp;</div>
-          <div class="author-info">
-            <strong class="animated-bg animated-bg-text" id="name"
-              >&nbsp;</strong
-            >
-            <small class="animated-bg animated-bg-text" id="date">&nbsp;</small>
+    <div class="card-container" id="card-container">
+      <!-- <div class="card">
+        <div class="card-header animated-bg" id="header">&nbsp;</div>
+        <div class="card-content">
+          <h3 class="card-title animated-bg animated-bg-text" id="title">
+            &nbsp;
+          </h3>
+          <p class="card-exerpt" id="exerpt">
+            &nbsp;
+            <span class="animated-bg animated-bg-text">&nbsp;</span>
+            <span class="animated-bg animated-bg-text">&nbsp;</span>
+            <span class="animated-bg animated-bg-text">&nbsp;</span>
+          </p>
+          <div class="author">
+            <div class="profile-img animated-bg" id="profile-img">&nbsp;</div>
+            <div class="author-info">
+              <strong class="card-name animated-bg animated-bg-text" id="name"
+                >&nbsp;</strong
+              >
+              <small class="card-date animated-bg animated-bg-text" id="date"
+                >&nbsp;</small
+              >
+            </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
     <script src="script.js"></script>
   </body>
