Finish Day 27's toast notification functionality

--- a/Day 27 - Toast Notification/index.html
+++ b/Day 27 - Toast Notification/index.html
@@ -14,6 +14,10 @@
     <title>Toast Notification</title>
   </head>
   <body>
+    <div id="toasts">
+      <!-- Divs with class of "toast" will be appended here via JS -->
+    </div>
+    <button class="btn" id="button">Show Notification</button>
     <script src="script.js"></script>
   </body>
 </html>
