--- a/Day 29 - Double Click Heart/index.html
+++ b/Day 29 - Double Click Heart/index.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <h3>Double-click on the image to <i class="fas fa-heart"></i> it</h3>
-    <small>You Liked it <span id="times">0</span> times</small>
     <div class="loveMe"></div>
+    <small>You Liked <span id="times">0</span> images</small>
     <script src="script.js"></script>
   </body>
 </html>
