Finish Day 31's password generation functionality

--- a/Day 31 - Password Generator/index.html
+++ b/Day 31 - Password Generator/index.html
@@ -23,6 +23,8 @@
         </button>
       </div>
 
+      <button class="btn btn-message" id="message">Copied!</button>
+
       <div class="settings">
         <div class="setting">
           <label>Password Length</label>
