--- a/Day 35 - Image Carousel/index.html
+++ b/Day 35 - Image Carousel/index.html
@@ -14,6 +14,35 @@
     <title>Image Carousel</title>
   </head>
   <body>
+    <div class="carousel">
+      <div class="image-container" id="imgs">
+        <img
+          src="https://source.unsplash.com/random/700x600"
+          alt="first-image"
+        />
+        <img
+          src="https://source.unsplash.com/random/800x500"
+          alt="second-image"
+        />
+        <img
+          src="https://source.unsplash.com/random/700x500"
+          alt="third-image"
+        />
+        <img
+          src="https://source.unsplash.com/random/750x750"
+          alt="fourth-image"
+        />
+        <img
+          src="https://source.unsplash.com/random/800x625"
+          alt="fifth-image"
+        />
+      </div>
+
+      <div class="buttons-container">
+        <button id="left" class="btn">Previous</button>
+        <button id="right" class="btn">Next</button>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
