--- a/Day 36 - Hoverboard/index.html
+++ b/Day 36 - Hoverboard/index.html
@@ -14,6 +14,7 @@
     <title>Hoverboard</title>
   </head>
   <body>
+    <div class="container" id="container"></div>
     <script src="script.js"></script>
   </body>
 </html>
