Finish Day 37's Pokedex functionality! Update README with Day 37 content

--- a/Day 37 - Pokedex/index.html
+++ b/Day 37 - Pokedex/index.html
@@ -12,6 +12,51 @@
     />
     <link rel="stylesheet" href="style.css" />
     <title>Pokedex</title>
+    <h1>Pokedex</h1>
+
+    <div class="poke-container" id="poke-container">
+      <!-- <div class="pokemon" style="background-color: rgb(222, 253, 224)">
+        <div class="image-container">
+          <img
+            src="https://img.pokemondb.net/artwork/large/bulbasaur.jpg"
+            alt=""
+          />
+        </div>
+        <div class="info">
+          <span class="number">#001</span>
+          <h3 class="name">Bulbasaur</h3>
+          <small class="type">Type: <span>Grass</span></small>
+        </div>
+      </div>
+
+      <div class="pokemon" style="background-color: rgb(222, 253, 224)">
+        <div class="image-container">
+          <img
+            src="https://img.pokemondb.net/artwork/large/ivysaur.jpg"
+            alt=""
+          />
+        </div>
+        <div class="info">
+          <span class="number">#002</span>
+          <h3 class="name">Ivysaur</h3>
+          <small class="type">Type: <span>Grass</span></small>
+        </div>
+      </div>
+
+      <div class="pokemon" style="background-color: rgb(222, 253, 224)">
+        <div class="image-container">
+          <img
+            src="https://img.pokemondb.net/artwork/large/venusaur.jpg"
+            alt=""
+          />
+        </div>
+        <div class="info">
+          <span class="number">#003</span>
+          <h3 class="name">Venusaur</h3>
+          <small class="type">Type: <span>Grass</span></small>
+        </div>
+      </div> -->
+    </div>
   </head>
   <body>
     <script src="script.js"></script>
