--- a/Day 38 - Mobile Tab Navigation/index.html
+++ b/Day 38 - Mobile Tab Navigation/index.html
@@ -14,6 +14,48 @@
     <title>Mobile Tab Navigation</title>
   </head>
   <body>
+    <div class="phone">
+      <img
+        src="https://source.unsplash.com/random/500x500"
+        alt="home"
+        class="content show"
+      />
+      <img
+        src="https://source.unsplash.com/random/525x500"
+        alt="work"
+        class="content"
+      />
+      <img
+        src="https://source.unsplash.com/random/500x525"
+        alt="blog"
+        class="content"
+      />
+      <img
+        src="https://source.unsplash.com/random/450x450"
+        alt="about"
+        class="content"
+      />
+      <nav>
+        <ul>
+          <li class="active">
+            <i class="fas fa-home"></i>
+            <p>Home</p>
+          </li>
+          <li>
+            <i class="fas fa-box"></i>
+            <p>Work</p>
+          </li>
+          <li>
+            <i class="fas fa-book-open"></i>
+            <p>Blog</p>
+          </li>
+          <li>
+            <i class="fas fa-users"></i>
+            <p>About Us</p>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
