--- a/Day 43 - Feedback UI Design/index.html
+++ b/Day 43 - Feedback UI Design/index.html
@@ -14,6 +14,38 @@
     <title>Feedback UI Design</title>
   </head>
   <body>
+    <div id="panel" class="panel-container">
+      <strong
+        >How satisfied are you with our <br />
+        customer support performance?</strong
+      >
+      <div class="ratings-container">
+        <div class="rating">
+          <img
+            src="https://image.flaticon.com/icons/svg/187/187150.svg"
+            alt="Unhappy face"
+          />
+          <small>Unhappy</small>
+        </div>
+
+        <div class="rating">
+          <img
+            src="https://image.flaticon.com/icons/svg/187/187136.svg"
+            alt="Neutral face"
+          />
+          <small>Neutral</small>
+        </div>
+
+        <div class="rating active">
+          <img
+            src="https://image.flaticon.com/icons/svg/187/187133.svg"
+            alt="Happy face"
+          />
+          <small>Satisfied</small>
+        </div>
+      </div>
+      <button class="btn" id="send">Send Review</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
