--- a/Day 46 - Quiz App/index.html
+++ b/Day 46 - Quiz App/index.html
@@ -16,12 +16,12 @@
             <label for="a" id="a_text">Question</label>
           </li>
           <li>
-            <input type="radio" name="answer" id="b class="answer" />
+            <input type="radio" name="answer" id="b" class="answer" />
             <label for="b" id="b_text">Question</label>
           </li>
           <li>
             <input type="radio" name="answer" id="c" class="answer" />
-            <label for="c" id="ctext">Question</label>
+            <label for="c" id="c_text">Question</label>
           </li>
           <li>
             <input type="radio" name="answer" id="d" class="answer" />
