Add additional styling to Day 06 project. Minor superficial changes (dark background, white font), and replaced generic text placeholder content on the 'boxes' with random Unsplash images.

--- a/Day 06 - Scroll Animation/index.html
+++ b/Day 06 - Scroll Animation/index.html
@@ -10,49 +10,46 @@
   <body>
     <h1>Scroll to see the animation</h1>
     <div class="box">
-      <h2>Content</h2>
+      <img src="https://source.unsplash.com/random/601x501" alt="Random Image">
     </div>
     <div class="box">
-      <h2>Content</h2>
+      <img src="https://source.unsplash.com/random/600x500" alt="Random Image">
     </div>
     <div class="box">
-      <h2>Content</h2>
+      <img src="https://source.unsplash.com/random/602x502" alt="Random Image">
     </div>
     <div class="box">
-      <h2>Content</h2>
+      <img src="https://source.unsplash.com/random/603x503" alt="Random Image">
     </div>
     <div class="box">
-      <h2>Content</h2>
+      <img src="https://source.unsplash.com/random/604x504" alt="Random Image">
     </div>
     <div class="box">
-      <h2>Content</h2>
+      <img src="https://source.unsplash.com/random/605x505" alt="Random Image">
     </div>
     <div class="box">
-      <h2>Content</h2>
+      <img src="https://source.unsplash.com/random/606x506" alt="Random Image">
     </div>
     <div class="box">
-      <h2>Content</h2>
+      <img src="https://source.unsplash.com/random/607x507" alt="Random Image">
     </div>
     <div class="box">
-      <h2>Content</h2>
+      <img src="https://source.unsplash.com/random/608x508" alt="Random Image">
     </div>
     <div class="box">
-      <h2>Content</h2>
+      <img src="https://source.unsplash.com/random/609x509" alt="Random Image">
     </div>
     <div class="box">
-      <h2>Content</h2>
+      <img src="https://source.unsplash.com/random/610x500" alt="Random Image">
     </div>
     <div class="box">
-      <h2>Content</h2>
+      <img src="https://source.unsplash.com/random/611x500" alt="Random Image">
     </div>
     <div class="box">
-      <h2>Content</h2>
+      <img src="https://source.unsplash.com/random/612x500" alt="Random Image">
     </div>
     <div class="box">
-      <h2>Content</h2>
-    </div>
-    <div class="box">
-      <h2>Content</h2>
+      <img src="https://source.unsplash.com/random/613x500" alt="Random Image">
     </div>
 
     <script src="script.js"></script>
